tests/ui/option_not_sized.stderr
error[E0277]: the trait bound `&'static (dyn Debug + 'static): cxx::rust_option::OptionPtrTarget` is not satisfied
 --> tests/ui/option_not_sized.rs:2:14
  |
2 |     const _: <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target =
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Sized` is not implemented for `(dyn Debug + 'static)`, which is required by `Option<&'static (dyn Debug + 'static)>: OptionFfi`
  |
  = help: the trait `OptionFfi` is implemented for `Option<T>`
  = note: required for `&'static (dyn Debug + 'static)` to implement `cxx::rust_option::OptionPtrTarget`
  = note: required for `Option<&'static (dyn Debug + 'static)>` to implement `OptionFfi`

error[E0599]: no function or associated item named `new` found for struct `cxx::rust_option::_::RustOption` in the current scope
 --> tests/ui/option_not_sized.rs:3:79
  |
3 |         <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target::new();
  |                                                                               ^^^ function or associated item not found in `RustOption<&dyn Debug>`

error[E0277]: the trait bound `&'static (dyn Debug + 'static): cxx::rust_option::OptionPtrTarget` is not satisfied
 --> tests/ui/option_not_sized.rs:3:9
  |
3 |         <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target::new();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Sized` is not implemented for `(dyn Debug + 'static)`, which is required by `Option<&'static (dyn Debug + 'static)>: OptionFfi`
  |
  = help: the trait `OptionFfi` is implemented for `Option<T>`
  = note: required for `&'static (dyn Debug + 'static)` to implement `cxx::rust_option::OptionPtrTarget`
  = note: required for `Option<&'static (dyn Debug + 'static)>` to implement `OptionFfi`

error[E0277]: the trait bound `&dyn Debug: cxx::rust_option::OptionPtrTarget` is not satisfied
 --> tests/ui/option_not_sized.rs:3:9
  |
3 |         <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target::new();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Sized` is not implemented for `dyn Debug`, which is required by `Option<&dyn Debug>: OptionFfi`
  |
  = help: the trait `OptionFfi` is implemented for `Option<T>`
  = note: required for `&dyn Debug` to implement `cxx::rust_option::OptionPtrTarget`
  = note: required for `Option<&dyn Debug>` to implement `OptionFfi`
