tests/ui/option_not_sized.rs
fn foo() {
    const _: <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target =
        <Option<&dyn core::fmt::Debug> as ::cxx::private::OptionFfi>::Target::new();
}

fn main() {}
